# opentrakr

./: .gitignore  README.md  pyproject.toml  setup.py
opentrakr/: fsis_wgs_download.py  narms_wgs_download.py  ncbi_tsv_download.py  ncbi_tsv_merge.py
opentrakr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
